Home page with user sign in Enabled user sign in functions. Need to address lack of details field

--- a/app/views/deliveries/index2.html.erb
+++ b/app/views/deliveries/index2.html.erb
@@ -9,6 +9,9 @@
         Delivery Tracker
       </h1>
 
+      <p><%= notice %></p>
+      <p><%= alert %></p> 
+      
       <p>Know if something gets lost in the mail.</p>
     </div>
   <hr>
